--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/youtube-player": "^5.5.7",
     "autoprefixer": "^10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
