--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
